Minor fix to footer alignment

--- a/css/main.css
+++ b/css/main.css
@@ -20,9 +20,9 @@ section{
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-div{
+/*div{
   padding-bottom: 1rem;
-}
+}*/
 h1 {
   font-size: 3rem;
   font-weight: bold;
@@ -38,6 +38,7 @@ h3 {
   font-size: 1.5rem;
   font-weight: bold;
 }
+
 p{
   font-size: 1.25rem;
   line-height: 1.4;
@@ -101,9 +102,8 @@ header {
   width: 100%;
 }
 
-.grid {
-  width: 100%;
-  display: block;
+.fac-blurb {
+  margin-bottom: 3rem;
 }
 
 footer {
@@ -122,6 +122,7 @@ footer {
 
 .copyright {
   float: left;
+  font-size: 0.9rem;
 }
 
 .fac-icon {
